--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "authors": [
         {
-            "name": "phper_hyf",
+            "name": "tuhuokeji",
             "email": "2192138785@qq.com"
         }
     ],
